Inspector: [Chromium] http/tests/inspector/indexeddb/database-data.html ASSERT on Win7 following r133855 https://bugs.webkit.org/show_bug.cgi?id=101618

Deactivate transactions created by the inspector, before
they are reactivated by IndexedDB. This puts transactions
in an identical state as when they are created by scripts.

Reviewed by Vsevolod Vlasov.

Test: http/tests/inspector/indexeddb/database-data.html

* inspector/InspectorIndexedDBAgent.cpp: Make transactions inactive upon leaving the inspector code.


git-svn-id: svn://svn.chromium.org/blink/trunk@146116 bbb929c8-8fbe-4397-9dbb-9b2b20218538