third_party/WebKit/Source/WebCore/inspector/InspectorIndexedDBAgent.cpp
@@ -56,6 +56,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "IDBMetadata.h"
 #include "IDBObjectStore.h"
 #include "IDBOpenDBRequest.h"
+#include "IDBPendingTransactionMonitor.h"
 #include "IDBRequest.h"
 #include "IDBTransaction.h"
 #include "InjectedScript.h"
@@ -190,6 +191,7 @@ public:
 
         RefPtr<IDBDatabase> idbDatabase = requestResult->idbDatabase();
         m_executableWithDatabase->execute(idbDatabase);
+        IDBPendingTransactionMonitor::deactivateNewTransactions();
         idbDatabase->close();
     }
 
